# tup

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  docker-compose.yml  next.md  package-lock.json  package.json  pyproject.toml
frontend/: index.html  package.json  vite.config.js
plan/: phase-1-semantic-canvas-review.md  phase-10-branch-aware-review.md  phase-11-transactional-branch-operations-review.md  phase-12-branch-layout-audit-active-path-review.md  phase-13-pinned-production-path-subtree-operations-review.md  phase-14-dedicated-branch-operation-log-governance-console-review.md  phase-15-branch-governance-console-reasoned-operations-review.md  phase-16-dedicated-branch-operation-endpoint-actor-aware-governance-review.md  phase-17-global-governance-aggregates-operation-detail-review.md  phase-18-canvas-native-media-editing-review.md  phase-19-media-lineage-ui-polish-review.md  phase-2-prompt-program-review.md  phase-20-media-branch-comparison-review.md  phase-21-media-production-approval-review.md  phase-22-approval-governance-integration-review.md  phase-23-canvas-upload-multi-image-edit-review.md  phase-24-prompt-beautifier-case-retrieval-review.md  phase-25-prompt-spec-blueprint-preview-review.md  phase-3-image-optimization-review.md  phase-4-evaluation-repair-review.md  phase-5-repair-generation-loop-review.md  phase-6-repair-versioning-review.md  phase-7-side-by-side-dimension-delta-review.md  phase-8-targeted-dimension-repair-review.md  phase-9-canvas-native-version-graph-review.md
src/: __init__.py  config.py  dependencies.py  main.py
(+150 files in other folders)
